--- a/src/ui/components/Button/Button.module.css
+++ b/src/ui/components/Button/Button.module.css
@@ -20,6 +20,14 @@
   transform: scale(0.95);
 }
 
-/** TODO: Create separate styles for .primary and .secondary variants of this button:
-* - Must use the CSS variables declared in App.css
-*/
+.primary {
+  border-color: var(--color-brand);
+  background-color: var(--color-brand);
+  color: #fff;
+}
+
+.secondary {
+  border-color: var(--color-brand);
+  background-color: #fff;
+  color: var(--color-brand);
+}
