--- a/src/ui/components/Section/Section.module.css
+++ b/src/ui/components/Section/Section.module.css
@@ -5,8 +5,14 @@
   color: var(--color-text);
   margin: 3rem auto;
   max-width: var(--width-content);
-  padding: 2rem 3rem;
+  padding: 1.5rem;
   width: 100%;
+}
+
+@media (min-width: 768px) {
+  .section {
+    padding: 2rem 3rem;
+  }
 }
 
 .dark {
